--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,12 +68,12 @@
                       </div>
                       <div  class="column">
 
-                        <h6>N= num de computadoras</h6>
-                        <h6>δ= distribucion de trabajos</h6>
-                        <h6>β= falla en compilamiento perfiferico</h6>
-                        <h6>γ= falla en compilamiento central</h6>
-                        <h6>ɑ= generacion de trabajo</h6>
-                        <h6>reboot= recuperacion despues de falla</h6>
+                        <h6>N= Num de computadoras</h6>
+                        <h6>δ= Distribución de trabajos</h6>
+                        <h6>β= Falla en compilamiento periférico</h6>
+                        <h6>γ= Falla en compilamiento central</h6>
+                        <h6>ɑ= Generación de trabajo</h6>
+                        <h6>reboot= Recuperación después de falla</h6>
                        
                    </div>
                <div><button type="button" class="btn btn-success">Start</button></div>
